añadiendo las carpetas de astro otra vez

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -7,5 +6,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<section>
+		<h1>Hola a todos</h1>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni possimus praesentium dolores pariatur itaque? Atque tenetur facere quod vero amet aspernatur soluta nam laboriosam molestiae. Aperiam cupiditate quos corporis officiaa</p>
+	</section>
 </Layout>
