Añadiendo nueva info de gina

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<section>
-		<h1>Hola a todos</h1>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni possimus praesentium dolores pariatur itaque? Atque tenetur facere quod vero amet aspernatur soluta nam laboriosam molestiae. Aperiam cupiditate quos corporis officiaa</p>
+		<h1>Gina Rosario Pizarro Cabezas</h1>
+		<ul>
+			<li>Medica Dermatologa</li>
+			<li>Especialista en Criocirugia y cirugia dernatologica</li>
+		</ul>
 	</section>
 </Layout>
