--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,14 @@
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+	@import "tailwindcss";
+
+	@theme {
+		---color-color1:  #ff0301; 
+		----color-color2: #ff2b1e;	
+		----color-color3: #ff543a;
+		----color-color4: #ff7c57;
+		----color-color5: #ffa574;
 	}
+
 </style>
