--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -23,4 +23,8 @@
 		----color-color5: #ffa574;
 	}
 
+	body {
+		margin: 0;
+		padding: 0;
+	}
 </style>
