hice hero y mejore un poco el navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,11 +2,11 @@
 import MenuIcon from "../assets/menu.svg"
 ---
 
-<header class="">
+<header class="fixed w-full">
     <section class="bg-orange-500 px-8 py-[2px] text-center text-white font-semibold text-lg md:px-24 md:text-right">
-        <p>Llamenos al Movil 3413612371</p>
+        <p>Llamenos al Movil 3416936477</p>
     </section>
-    <nav class="shadow-lg flex items-center px-8 justify-between relative md:px-24" id="nav">
+    <nav class="bg-white shadow-lg flex items-center px-8 justify-between relative md:px-24" id="nav">
         <picture class= "w-[400px] h-[50px] overflow-hidden">
             <img src="../../public/logoGina2.png" class="h-full w-full object-contain"/>
         </picture>
@@ -18,7 +18,7 @@ import MenuIcon from "../assets/menu.svg"
         <MenuIcon id="menu-nav" class="w-6 h-6 cursor-pointer md:hidden" />
 
          <ul id="mobile-menu"
-          class="absolute top-full right-0 text-gray-600 shadow-lg list-none cursor-pointer text-lg flex flex-col space-y-3 px-6 py-4 w-full text-center uppercase md:hidden"
+          class="bg-white absolute top-full right-0 text-gray-600 shadow-lg list-none cursor-pointer text-lg flex flex-col space-y-3 px-6 py-4 w-full text-center uppercase md:hidden"
         >
           <li class="hover:text-orange-600">inicio</li>
           <li class="hover:text-orange-600">tratamientos</li>
